--- a/index.html
+++ b/index.html
@@ -21,10 +21,6 @@
     <nav id="navbar" class="w-full fixed px-5 lg:px-8 xl:px-[8%] py-4 flex items-center justify-between z-50">
         <p class="bg-white bg-opacity-50 backdrop-blur-lg shadow-sm dark:bg-darkTheme dark:shadow-white/20 sr-only">
             Hidden</p>
-        <a href="#!">
-            <img src="./assets/logo.png" alt="Logo" class="w-28 cursor-pointer mr-14 dark:hidden" />
-            <img src="./assets/logo_dark.png" alt="Logo" class="w-28 cursor-pointer mr-14 hidden dark:block" />
-        </a>
 
         <ul id="navLink"
             class="hidden md:flex items-center gap-6 lg:gap-8 rounded-full px-12 py-3 bg-white shadow-sm bg-opacity-50 font-Ovo dark:border dark:border-white/30 dark:bg-transparent ">
@@ -72,46 +68,41 @@
     </nav>
 
     <!-- ----- home section ------ -->
-    <div class="w-11/12 max-w-3xl text-center mx-auto h-screen flex flex-col items-center justify-center gap-4">
+    <div class="w-11/12 max-w-2xl text-center mx-auto h-screen flex flex-col items-center justify-center gap-4">
         <img src="./assets/profile-img.png" alt="" class="rounded-full w-32" />
         <h3 class="flex items-end gap-2 text-xl md:text-2xl mb-3 font-Ovo">
-            Hi! I&apos;m Eliana Jade
+            Hi! I&apos;m Nizamudheen Punnoli
             <img src="./assets/hand-icon.png" alt="" class="w-6 mb-1" />
         </h3>
-        <h1 class="text-3xl sm:text-6xl lg:text-[66px] font-Ovo">frontend web developer based in London.</h1>
-        <p class="max-w-2xl mx-auto font-Ovo">I am a frontend developer from California, USA with 10 years of experience
-            in multiple companies like Microsoft, Tesla and Apple.</p>
-
+        <h1 class="text-3xl sm:text-6xl lg:text-[66px] font-Ovo">full stack developer based in Kerala.</h1>
         <div class="flex flex-col sm:flex-row items-center gap-4 mt-4">
             <a href="#contact"
                 class="px-10 py-2.5 border rounded-full bg-gradient-to-r from-[#b820e6] to-[#da7d20] text-white flex items-center gap-2 dark:border-transparent">
                 contact me <img src="./assets/right-arrow-white.png" alt="" class="w-4" />
             </a>
 
-            <a href="./assets/dev-icon.png" download
+            <a href="https://github.com/Nizamudheenp"
                 class="px-10 py-2.5 rounded-full border border-gray-300 dark:border-white/25 hover:bg-slate-100/70 dark:hover:bg-darkHover flex items-center gap-2 bg-white dark:bg-transparent dark:text-white">
-                my resume <img src="./assets/download-icon.png" alt="" class="w-4 dark:invert" />
+                GitHub <img src="./assets/right-arrow-bold.png" alt="" class="w-4" />
             </a>
         </div>
     </div>
 
     <!-- ----- about me section ------ -->
     <div id="about" class="w-full px-[12%] py-10 scroll-mt-20">
-        <h4 class="text-center mb-2 text-lg font-Ovo">Introduction</h4>
         <h2 class="text-center text-5xl font-Ovo">About me</h2>
         <div class="flex w-full flex-col lg:flex-row items-center gap-20 my-20">
             <div class="max-w-max mx-auto relative"><img src="./assets/user-image.png" alt=""
                     class="w-64 sm:w-80 rounded-3xl max-w-none">
                 <div
-                    class="bg-white w-1/2 aspect-square absolute right-0 bottom-0 rounded-full translate-x-1/4 translate-y-1/3 shadow-[0_4px_55px_rgba(149,0,162,0.15)] flex items-center justify-center">
-                    <img src="./assets/circular-text.png" alt="" class="w-full animate-spin_slow">
+                    class="bg-white w-1/4 aspect-square absolute right-0 bottom-0 rounded-full translate-x-1/4 translate-y-1/3 shadow-[0_4px_55px_rgba(149,0,162,0.15)] flex items-center justify-center">
                     <img src="./assets/dev-icon.png" alt=""
-                        class="w-1/4 absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2">
+                        class="w-1/2 absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2">
                 </div>
             </div>
             <div class="flex-1">
-                <p class="mb-10 max-w-2xl font-Ovo">I am an experienced Frontend Developer with over a decade of
-                    professional expertise in the field. Throughout my career, I have had the privilege of collaborating
+                <p class="mb-10 max-w-2xl font-Ovo">I am an experienced Full-Stack Web Developer. Throughout my career,
+                    I have had the privilege of collaborating
                     with prestigious organizations, contributing to their success and growth.</p>
                 <ul class="grid grid-cols-1 sm:grid-cols-3 gap-6 max-w-2xl">
                     <li
@@ -168,7 +159,7 @@
         <h4 class="text-center mb-2 text-lg font-Ovo">My portfolio</h4>
         <h2 class="text-center text-5xl font-Ovo">My latest work</h2>
         <p class="text-center max-w-2xl mx-auto mt-5 mb-12 font-Ovo">Welcome to my web development portfolio! Explore a
-            collection of projects showcasing my expertise in front-end development.</p>
+            collection of projects showcasing my expertise in full-stack development.</p>
         <div class="grid grid-cols-auto my-10 gap-5 dark:text-black">
             <div class="aspect-square bg-no-repeat bg-cover bg-center rounded-lg relative cursor-pointer group"
                 style="background-image: url('./assets/work-1.png');">
@@ -264,23 +255,21 @@
 
     <!-- Footer -->
     <div class="mt-20">
-        <div class="text-center">
-            <a href="#!">
-                <img src="./assets/logo.png" alt="" class="w-36 mx-auto mb-2 dark:hidden">
-                <img src="./assets/logo_dark.png" alt="" class="w-36 mx-auto mb-2 hidden dark:block">
-            </a>
-            <div class="w-max flex items-center gap-2 mx-auto">
-                <img src="./assets/mail_icon.png" alt="" class="w-5 dark:hidden">
-                <img src="./assets/mail_icon_dark.png" alt="" class="w-5 hidden dark:block">
-                <a href="#!">contact@prebuiltui.com</a>
-            </div>
-        </div>
+
         <div class="text-center sm:flex items-center justify-between border-t border-gray-400 mx-[10%] mt-12 py-3">
-            <p>© 2025 <a href="https://prebuiltui.com/" target="_blank">PrebuiltUI</a>. All rights reserved. Distributed by <a href="https://themewagon.com" target="_blank">ThemeWagon</a></p> 
+            <div class="text-center">
+                <div class="w-max flex items-center gap-2 mx-auto">
+                    <img src="./assets/mail_icon.png" alt="" class="w-5 dark:hidden">
+                    <img src="./assets/mail_icon_dark.png" alt="" class="w-5 hidden dark:block">
+                    <a href="#!">nizampnizam7@gmail.com.com</a>
+                </div>
+            </div>
+
+            <p>© 2025 <a href="#">Portfolio</a>. All rights reserved. Distributed
+                by <a href="#">Nizamudheen Punnoli</a></p>
             <ul class="flex items-center gap-10 justify-center mt-4 sm:mt-0">
-                <li><a target="_blank" href="#!">GitHub</a></li>
-                <li><a target="_blank" href="#!">LinkedIn</a></li>
-                <li><a target="_blank" href="#!">Twitter</a></li>
+                <li><a target="_blank" href="https://github.com/Nizamudheenp">GitHub</a></li>
+                <li><a target="_blank" href="https://www.linkedin.com/in/nizamudheen-punnoli">LinkedIn</a></li>
             </ul>
         </div>
     </div>
