--- a/index.html
+++ b/index.html
@@ -70,11 +70,15 @@
     <!-- ----- home section ------ -->
     <div class="w-11/12 max-w-2xl text-center mx-auto h-screen flex flex-col items-center justify-center gap-4">
         <img src="./assets/profile-img.png" alt="" class="rounded-full w-32" />
-        <h3 class="flex items-end gap-2 text-xl md:text-2xl mb-3 font-Ovo">
-            Hi! I&apos;m Nizamudheen Punnoli
-            <img src="./assets/hand-icon.png" alt="" class="w-6 mb-1" />
+        <h3 class="flex items-end gap-2 text-md mb-3 font-Ovo">
+            based in Kerala, India - open to relocate
         </h3>
-        <h1 class="text-3xl sm:text-6xl lg:text-[66px] font-Ovo">full stack developer based in Kerala.</h1>
+        <h1 class="text-3xl sm:text-6xl lg:text-[66px] font-Ovo">Hi! I&apos;m Nizamudheen Punnoli - full stack developer
+        </h1>
+        <p class="max-w-2xl font-Ovo">Passionate about building responsive and user-friendly web applications
+            using JavaScript, React.js, Node.js, Express, MongoDB, and Tailwind CSS. With 6 months of hands-on
+            experience, I focus on clean UI, basic performance, and writing readable, maintainable code while
+            continuously improving my full-stack development skills.</p>
         <div class="flex flex-col sm:flex-row items-center gap-4 mt-4">
             <a href="#contact"
                 class="px-10 py-2.5 border rounded-full bg-gradient-to-r from-[#b820e6] to-[#da7d20] text-white flex items-center gap-2 dark:border-transparent">
@@ -91,19 +95,34 @@
     <!-- ----- about me section ------ -->
     <div id="about" class="w-full px-[12%] py-10 scroll-mt-20">
         <h2 class="text-center text-5xl font-Ovo">About me</h2>
-        <div class="flex w-full flex-col lg:flex-row items-center gap-20 my-20">
-            <div class="max-w-max mx-auto relative"><img src="./assets/user-image.png" alt=""
-                    class="w-64 sm:w-80 rounded-3xl max-w-none">
-                <div
-                    class="bg-white w-1/4 aspect-square absolute right-0 bottom-0 rounded-full translate-x-1/4 translate-y-1/3 shadow-[0_4px_55px_rgba(149,0,162,0.15)] flex items-center justify-center">
-                    <img src="./assets/dev-icon.png" alt=""
-                        class="w-1/2 absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2">
-                </div>
-            </div>
+        <div class="flex w-full flex-col items-center gap-20 my-10">
             <div class="flex-1">
-                <p class="mb-10 max-w-2xl font-Ovo">I am an experienced Full-Stack Web Developer. Throughout my career,
-                    I have had the privilege of collaborating
-                    with prestigious organizations, contributing to their success and growth.</p>
+                <div class="mb-10 max-w-2xl font-Ovo ">
+                    <p>My name is nizamudheen punnoli, and I am a web developer with 6 months of
+                        hands-on experience building responsive and user-friendly web applications. I enjoy working with
+                        JavaScript, React.js, and Tailwind CSS to create clean, simple, and functional user interfaces
+                        that
+                        provide a good user experience.
+                    </p>
+                    <p> Along with frontend development, I have practical experience in Node.js, Express, and MongoDB,
+                        which
+                        allows me to understand and work on full-stack features when required. I like connecting
+                        frontend
+                        interfaces with backend APIs and learning how real-world applications are built end to end.
+                    </p>
+
+                    <p> I have worked on personal projects and practice applications that focus on performance,
+                        responsiveness, and clean code. Writing readable code, improving my problem-solving skills, and
+                        learning modern web development practices motivate me to grow as a developer every day.
+                    </p>
+                    <p>Outside of coding, I enjoy learning new technologies, exploring developer content, and
+                        continuously
+                        improving my skills. I am looking for opportunities where I can learn, contribute, and grow
+                        while
+                        building meaningful products with a good team.
+                    </p>
+                </div>
+
                 <ul class="grid grid-cols-1 sm:grid-cols-3 gap-6 max-w-2xl">
                     <li
                         class="border border-gray-300 dark:border-white/30 rounded-xl p-6 cursor-pointer hover:bg-lightHover hover:-translate-y-1 duration-500 hover:shadow-black dark:hover:shadow-white/80 dark:hover:bg-darkHover/50">
@@ -156,8 +175,7 @@
 
     <!-- My Work Section -->
     <div id="work" class="w-full px-[12%] py-10 scroll-mt-20">
-        <h4 class="text-center mb-2 text-lg font-Ovo">My portfolio</h4>
-        <h2 class="text-center text-5xl font-Ovo">My latest work</h2>
+        <h2 class="text-center text-5xl font-Ovo">My Projects</h2>
         <p class="text-center max-w-2xl mx-auto mt-5 mb-12 font-Ovo">Welcome to my web development portfolio! Explore a
             collection of projects showcasing my expertise in full-stack development.</p>
         <div class="grid grid-cols-auto my-10 gap-5 dark:text-black">
@@ -165,7 +183,7 @@
                 style="background-image: url('./assets/work-1.png');">
                 <div
                     class="bg-white w-10/12 rounded-md absolute bottom-5 left-1/2 -translate-x-1/2 py-3 px-5 flex items-center justify-between duration-500 group-hover:bottom-7">
-                    <div>
+                    <div>+0+
                         <h2 class="font-semibold">Frontend project</h2>
                         <p class="text-sm text-gray-700">Web Design</p>
                     </div>
@@ -217,9 +235,10 @@
                     </div>
                 </div>
             </div>
-        </div><a href="#"
-            class="w-max flex items-center justify-center gap-2 text-gray-700 border border-gray-300 dark:border-white/25 hover:bg-slate-100/70 dark:hover:bg-darkHover rounded-full py-2 px-8 mx-auto my-20 duration-300 dark:text-white">Show
-            more<img src="./assets/right-arrow-bold.png" alt="" class="w-4 dark:hidden"><img
+        </div>
+        <a href="#" class="w-max flex items-center justify-center gap-2 text-gray-700 border border-gray-300 dark:border-white/25 hover:bg-slate-100/70 dark:hover:bg-darkHover rounded-full py-2 px-8 mx-auto my-20 duration-300 dark:text-white">
+            Show more
+            <img src="./assets/right-arrow-bold.png" alt="" class="w-4 dark:hidden"><img
                 src="./assets/right-arrow-bold-dark.png" alt="" class="w-4 hidden dark:block"></a>
     </div>
 
