--- a/index.html
+++ b/index.html
@@ -173,6 +173,133 @@
         </div>
     </div>
 
+    <!--Marquee -->
+    <div class="w-full overflow-hidden bg-gray-100 dark:bg-darkTheme py-6">
+        <div class="marquee relative">
+            <div class="marquee-track flex items-center gap-10">
+                <div class="marquee-content flex items-center gap-10">
+                    <img src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/react.svg"
+                        class="w-12 sm:w-16 invert-0 dark:invert" alt="React">
+                    <img src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/nodedotjs.svg"
+                        class="w-12 sm:w-16 invert-0 dark:invert" alt="Node.js">
+                    <img src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/express.svg"
+                        class="w-12 sm:w-16 invert-0 dark:invert" alt="Express">
+                    <img src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/mongodb.svg"
+                        class="w-12 sm:w-16 invert-0 dark:invert" alt="MongoDB">
+                    <img src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/mysql.svg"
+                        class="w-12 sm:w-16 invert-0 dark:invert" alt="MySQL">
+
+                    <img src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/nextdotjs.svg"
+                        class="w-12 sm:w-16 invert-0 dark:invert" alt="Next.js">
+                    <img src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/typescript.svg"
+                        class="w-12 sm:w-16 invert-0 dark:invert" alt="TypeScript">
+                    <img src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/javascript.svg"
+                        class="w-12 sm:w-16 invert-0 dark:invert" alt="JavaScript">
+                    <img src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/html5.svg"
+                        class="w-12 sm:w-16 invert-0 dark:invert" alt="HTML5">
+                    <img src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/css3.svg"
+                        class="w-12 sm:w-16 invert-0 dark:invert" alt="CSS3">
+                    <img src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/bootstrap.svg"
+                        class="w-12 sm:w-16 invert-0 dark:invert" alt="Bootstrap">
+                    <img src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/materialui.svg"
+                        class="w-12 sm:w-16 invert-0 dark:invert" alt="Material UI">
+                    <img src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/redux.svg"
+                        class="w-12 sm:w-16 invert-0 dark:invert" alt="Redux">
+
+                    <img src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/npm.svg"
+                        class="w-12 sm:w-16 invert-0 dark:invert" alt="NPM">
+                    <img src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/git.svg"
+                        class="w-12 sm:w-16 invert-0 dark:invert" alt="Git">
+                    <img src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/github.svg"
+                        class="w-12 sm:w-16 invert-0 dark:invert" alt="GitHub">
+                    <img src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/postman.svg"
+                        class="w-12 sm:w-16 invert-0 dark:invert" alt="Postman">
+                    <img src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/figma.svg"
+                        class="w-12 sm:w-16 invert-0 dark:invert" alt="Figma">
+                    <img src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/visualstudiocode.svg"
+                        class="w-12 sm:w-16 invert-0 dark:invert" alt="VS Code">
+
+                    <img src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/vercel.svg"
+                        class="w-12 sm:w-16 invert-0 dark:invert" alt="Vercel">
+                    <img src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/netlify.svg"
+                        class="w-12 sm:w-16 invert-0 dark:invert" alt="Netlify">
+                    <img src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/render.svg"
+                        class="w-12 sm:w-16 invert-0 dark:invert" alt="Render">
+                    <img src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/railway.svg"
+                        class="w-12 sm:w-16 invert-0 dark:invert" alt="Railway">
+                    <img src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/n8n.svg"
+                        class="w-12 sm:w-16 invert-0 dark:invert" alt="n8n">
+
+                    <img src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/openai.svg"
+                        class="w-12 sm:w-16 invert-0 dark:invert" alt="AI">
+                </div>
+                <div class="marquee-content flex items-center gap-10">
+
+                    <img src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/react.svg"
+                        class="w-12 sm:w-16 invert-0 dark:invert" alt="React">
+                    <img src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/nodedotjs.svg"
+                        class="w-12 sm:w-16 invert-0 dark:invert" alt="Node.js">
+                    <img src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/express.svg"
+                        class="w-12 sm:w-16 invert-0 dark:invert" alt="Express">
+                    <img src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/mongodb.svg"
+                        class="w-12 sm:w-16 invert-0 dark:invert" alt="MongoDB">
+                    <img src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/mysql.svg"
+                        class="w-12 sm:w-16 invert-0 dark:invert" alt="MySQL">
+
+                    <img src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/nextdotjs.svg"
+                        class="w-12 sm:w-16 invert-0 dark:invert" alt="Next.js">
+                    <img src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/typescript.svg"
+                        class="w-12 sm:w-16 invert-0 dark:invert" alt="TypeScript">
+                    <img src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/javascript.svg"
+                        class="w-12 sm:w-16 invert-0 dark:invert" alt="JavaScript">
+                    <img src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/html5.svg"
+                        class="w-12 sm:w-16 invert-0 dark:invert" alt="HTML5">
+                    <img src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/css3.svg"
+                        class="w-12 sm:w-16 invert-0 dark:invert" alt="CSS3">
+                    <img src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/bootstrap.svg"
+                        class="w-12 sm:w-16 invert-0 dark:invert" alt="Bootstrap">
+                    <img src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/materialui.svg"
+                        class="w-12 sm:w-16 invert-0 dark:invert" alt="Material UI">
+                    <img src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/redux.svg"
+                        class="w-12 sm:w-16 invert-0 dark:invert" alt="Redux">
+
+                    <img src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/npm.svg"
+                        class="w-12 sm:w-16 invert-0 dark:invert" alt="NPM">
+                    <img src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/git.svg"
+                        class="w-12 sm:w-16 invert-0 dark:invert" alt="Git">
+                    <img src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/github.svg"
+                        class="w-12 sm:w-16 invert-0 dark:invert" alt="GitHub">
+                    <img src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/postman.svg"
+                        class="w-12 sm:w-16 invert-0 dark:invert" alt="Postman">
+                    <img src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/figma.svg"
+                        class="w-12 sm:w-16 invert-0 dark:invert" alt="Figma">
+                    <img src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/visualstudiocode.svg"
+                        class="w-12 sm:w-16 invert-0 dark:invert" alt="VS Code">
+
+                    <img src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/vercel.svg"
+                        class="w-12 sm:w-16 invert-0 dark:invert" alt="Vercel">
+                    <img src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/netlify.svg"
+                        class="w-12 sm:w-16 invert-0 dark:invert" alt="Netlify">
+                    <img src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/render.svg"
+                        class="w-12 sm:w-16 invert-0 dark:invert" alt="Render">
+                    <img src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/railway.svg"
+                        class="w-12 sm:w-16 invert-0 dark:invert" alt="Railway">
+                    <img src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/n8n.svg"
+                        class="w-12 sm:w-16 invert-0 dark:invert" alt="n8n">
+
+                    <img src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/openai.svg"
+                        class="w-12 sm:w-16 invert-0 dark:invert" alt="AI">
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+
+
     <!-- My Work Section -->
     <div id="work" class="w-full px-[12%] py-10 scroll-mt-20">
         <h2 class="text-center text-5xl font-Ovo">My Projects</h2>
@@ -183,7 +310,7 @@
                 style="background-image: url('./assets/work-1.png');">
                 <div
                     class="bg-white w-10/12 rounded-md absolute bottom-5 left-1/2 -translate-x-1/2 py-3 px-5 flex items-center justify-between duration-500 group-hover:bottom-7">
-                    <div>+0+
+                    <div>
                         <h2 class="font-semibold">Frontend project</h2>
                         <p class="text-sm text-gray-700">Web Design</p>
                     </div>
@@ -236,7 +363,8 @@
                 </div>
             </div>
         </div>
-        <a href="#" class="w-max flex items-center justify-center gap-2 text-gray-700 border border-gray-300 dark:border-white/25 hover:bg-slate-100/70 dark:hover:bg-darkHover rounded-full py-2 px-8 mx-auto my-20 duration-300 dark:text-white">
+        <a href="#"
+            class="w-max flex items-center justify-center gap-2 text-gray-700 border border-gray-300 dark:border-white/25 hover:bg-slate-100/70 dark:hover:bg-darkHover rounded-full py-2 px-8 mx-auto my-20 duration-300 dark:text-white">
             Show more
             <img src="./assets/right-arrow-bold.png" alt="" class="w-4 dark:hidden"><img
                 src="./assets/right-arrow-bold-dark.png" alt="" class="w-4 hidden dark:block"></a>
