works on experience

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Nizam Portfolio</title>
     <link rel="stylesheet" href="./output.css">
     <link rel="stylesheet" href="./input.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -122,53 +123,6 @@
                         building meaningful products with a good team.
                     </p>
                 </div>
-
-                <ul class="grid grid-cols-1 sm:grid-cols-3 gap-6 max-w-2xl">
-                    <li
-                        class="border border-gray-300 dark:border-white/30 rounded-xl p-6 cursor-pointer hover:bg-lightHover hover:-translate-y-1 duration-500 hover:shadow-black dark:hover:shadow-white/80 dark:hover:bg-darkHover/50">
-                        <img src="./assets/code-icon.png" alt="" class="w-7 mt-3 dark:hidden"><img
-                            src="./assets/code-icon-dark.png" alt="" class="w-7 mt-3 hidden dark:block">
-                        <h3 class="my-4 font-semibold text-gray-700 dark:text-white">Languages</h3>
-                        <p class="text-gray-600 text-sm dark:text-white/80">HTML, CSS, JavaScript React Js, Next Js</p>
-                    </li>
-                    <li
-                        class="border border-gray-300 dark:border-white/30 rounded-xl p-6 cursor-pointer hover:bg-lightHover hover:-translate-y-1 duration-500 hover:shadow-black dark:hover:shadow-white/80 dark:hover:bg-darkHover/50">
-                        <img src="./assets/edu-icon.png" alt="" class="w-7 mt-3 dark:hidden"><img
-                            src="./assets/edu-icon-dark.png" alt="" class="w-7 mt-3 hidden dark:block">
-                        <h3 class="my-4 font-semibold text-gray-700 dark:text-white">Education</h3>
-                        <p class="text-gray-600 text-sm dark:text-white/80">B.Tech in Computer Science</p>
-                    </li>
-                    <li
-                        class="border border-gray-300 dark:border-white/30 rounded-xl p-6 cursor-pointer hover:bg-lightHover hover:-translate-y-1 duration-500 hover:shadow-black dark:hover:shadow-white/80 dark:hover:bg-darkHover/50">
-                        <img src="./assets/project-icon.png" alt="" class="w-7 mt-3 dark:hidden"><img
-                            src="./assets/project-icon-dark.png" alt="" class="w-7 mt-3 hidden dark:block">
-                        <h3 class="my-4 font-semibold text-gray-700 dark:text-white">Projects</h3>
-                        <p class="text-gray-600 text-sm dark:text-white/80">Built more than 5 projects</p>
-                    </li>
-                </ul>
-                <h4 class="my-6 text-gray-700 font-Ovo dark:text-white/80">Tools i use</h4>
-                <ul class="flex items-center gap-3 sm:gap-5">
-                    <li
-                        class="flex items-center justify-center w-12 sm:w-14 aspect-square border border-gray-300 dark:border-white/30 rounded-lg cursor-pointer hover:-translate-y-1 duration-500">
-                        <img src="./assets/vscode.png" alt="vscode" class="w-5 sm:w-7">
-                    </li>
-                    <li
-                        class="flex items-center justify-center w-12 sm:w-14 aspect-square border border-gray-300 dark:border-white/30 rounded-lg cursor-pointer hover:-translate-y-1 duration-500">
-                        <img src="./assets/firebase.png" alt="firebase" class="w-5 sm:w-7">
-                    </li>
-                    <li
-                        class="flex items-center justify-center w-12 sm:w-14 aspect-square border border-gray-300 dark:border-white/30 rounded-lg cursor-pointer hover:-translate-y-1 duration-500">
-                        <img src="./assets/mongodb.png" alt="mongodb" class="w-5 sm:w-7">
-                    </li>
-                    <li
-                        class="flex items-center justify-center w-12 sm:w-14 aspect-square border border-gray-300 dark:border-white/30 rounded-lg cursor-pointer hover:-translate-y-1 duration-500">
-                        <img src="./assets/figma.png" alt="figma" class="w-5 sm:w-7">
-                    </li>
-                    <li
-                        class="flex items-center justify-center w-12 sm:w-14 aspect-square border border-gray-300 dark:border-white/30 rounded-lg cursor-pointer hover:-translate-y-1 duration-500">
-                        <img src="./assets/git.png" alt="git" class="w-5 sm:w-7">
-                    </li>
-                </ul>
             </div>
         </div>
     </div>
@@ -188,6 +142,8 @@
                         class="w-12 sm:w-16 invert-0 dark:invert" alt="MongoDB">
                     <img src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/mysql.svg"
                         class="w-12 sm:w-16 invert-0 dark:invert" alt="MySQL">
+                    <img src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/notion.svg"
+                        class="w-12 sm:w-16 invert-0 dark:invert" alt="Notion">
 
                     <img src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/nextdotjs.svg"
                         class="w-12 sm:w-16 invert-0 dark:invert" alt="Next.js">
@@ -245,7 +201,8 @@
                         class="w-12 sm:w-16 invert-0 dark:invert" alt="MongoDB">
                     <img src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/mysql.svg"
                         class="w-12 sm:w-16 invert-0 dark:invert" alt="MySQL">
-
+                    <img src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/notion.svg"
+                        class="w-12 sm:w-16 invert-0 dark:invert" alt="Notion">
                     <img src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/nextdotjs.svg"
                         class="w-12 sm:w-16 invert-0 dark:invert" alt="Next.js">
                     <img src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/typescript.svg"
@@ -295,9 +252,34 @@
     </div>
 
 
-
-
-
+    <div id="about" class="w-full px-[12%] py-10 scroll-mt-20">
+        <h2 class="text-center text-5xl font-Ovo">My experience</h2>
+        <div class="flex flex-col mt-5 gap-3">
+            <div class="flex gap-2 text-xl">
+                <i class="bi bi-building"></i>
+                <p>Ziya Academy LLP, Ernakulam, Kerala</p>
+            </div>
+            <p class="text-3xl">Full Stack Developer</p>
+            <div class="flex gap-2">
+                <i class="bi bi-calendar"></i>
+                <p>2025</p>
+            </div>
+            <p>Worked as a MERN Stack Developer using TypeScript and Tailwind CSS, focusing on a single company web
+                application.
+                Invested significant hours in development, creating an admin panel with CRUD functionalities and
+                integrating a project collaboration system like ColabX. This role involved close teamwork and delivering
+                a polished, user-friendly digital platform.</p>
+            <div class="flex gap-2 tex-center">
+                <p class="rounded-full px-3 border border-gray-300">React.js</p>
+                <p class="rounded-full px-3 border border-gray-300">Javascript</p>
+                <p class="rounded-full px-3 border border-gray-300">Tailwind CSS</p>
+                <p class="rounded-full px-3 border border-gray-300">Node.js</p>
+                <p class="rounded-full px-3 border border-gray-300">Express</p>
+                <p class="rounded-full px-3 border border-gray-300">MongoDB</p>
+                <p class="rounded-full px-3 border border-gray-300">TypeScript</p>
+            </div>
+        </div>
+    </div>
 
 
     <!-- My Work Section -->
